--- a/src/style.css
+++ b/src/style.css
@@ -4,12 +4,10 @@ body {
 }
 
 h1 {
-  font-size: 24px;
-  font-weight: 100;
-  line-height: 28.8px;
-  margin: 0;
+  font-size: 64px;
   color: #b4eae9;
   font-family: "Inconsolata", monospace;
+  text-align: center;
 }
 
 ul {
@@ -27,16 +25,17 @@ li {
   list-style: none;
   color: #b4eae9;
   text-transform: capitalize;
+  font-family: "Inconsolata", monospace;
 }
 
-.humwin {
+#currentTime {
+  text-align: center;
+}
+
+#descriptWeather {
   position: relative;
-  text-align: left;
-  top: -210px;
-  right: -215px;
-  padding: 5%;
-  margin: 10px;
-  color: #b4eae9;
+  top: 80px;
+  text-align: center;
 }
 
 .wapp {
@@ -51,56 +50,48 @@ li {
 }
 
 .temp {
-  font-size: 64px;
+  font-size: 55px;
   color: #b4eae9;
   font-family: "Inconsolata", monospace;
+  position: relative;
+  top: 12px;
+  right: -170px;
+  padding: 0px 0px 10px 0px;
+}
+
+#Humid {
+  position: relative;
+  bottom: -108px;
+  right: -285px;
+}
+
+#wind {
+  position: relative;
+  top: 90px;
+  right: -55px;
+  color: #b4eae9;
+}
+
+#minTemp {
+  position: relative;
+  top: 140px;
+  right: auto;
+  color: #32548f;
+}
+
+#maxTemp {
+  position: relative;
+  top: 120px;
+  right: -250px;
+  color: #32548f;
 }
 
 .search {
   position: relative;
-  top: -152px;
-  right: -48px;
+  top: -90px;
+  right: -75px;
   max-width: 50px;
   font-family: "Inconsolata", monospace;
-}
-
-.weeklyForecast {
-  font-family: "Inconsolata", monospace;
-}
-
-.Mon {
-  position: relative;
-  top: -185px;
-  left: -145px;
-  text-align: center;
-}
-
-.Tues {
-  position: relative;
-  top: -300px;
-  left: -10px;
-  text-align: center;
-}
-
-.Wed {
-  position: relative;
-  top: -417px;
-  right: -130px;
-  text-align: center;
-}
-
-.Thurs {
-  position: relative;
-  top: -430px;
-  left: -100px;
-  text-align: center;
-}
-
-.Fri {
-  position: relative;
-  bottom: 545px;
-  right: -70px;
-  text-align: center;
 }
 
 .search-Button {
@@ -115,8 +106,8 @@ li {
   box-shadow: rgba(37, 38, 39, 89, 0.08) 0px 8px 8px 0px;
   cursor: pointer;
   position: relative;
-  top: -180px;
-  right: -240px;
+  top: -118px;
+  right: -275px;
 }
 
 .search-Button:hover {
@@ -124,10 +115,11 @@ li {
   color: #332275;
 }
 
-.gitHubLink {
+#gitHubLink {
   font-family: "Inconsolata", monospace;
-  position: relative;
   cursor: pointer;
-  top: -25px;
-  right: -470px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 0px;
 }
