--- a/src/style.css
+++ b/src/style.css
@@ -91,6 +91,27 @@ li {
   color: #332275;
 }
 
+.metric-Button {
+  font-family: "Inconsolata", monospace;
+  display: block;
+  border: 1px solid;
+  background: #326096;
+  color: #b4eae9;
+  font-size: 16px;
+  border-radius: 30px;
+  transition: all 200ms ease-in-out;
+  box-shadow: rgba(37, 38, 39, 89, 0.08) 0px 8px 8px 0px;
+  cursor: pointer;
+  position: relative;
+  top: -40px;
+  right: -170px;
+}
+
+.metric-Button:hover {
+  background: #b4eae9;
+  color: #332275;
+}
+
 .celsius {
   font-size: 20px;
 }
@@ -124,10 +145,6 @@ li {
 
 #icon {
   text-align: center;
-}
-
-.cardOne {
-  max-width: 20px;
 }
 
 #gitHubLink {
